--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
 
   build: 
     name: Build and Push Container Image # the job's full name
-    runs-on: alpine-latest # the OS that this job runs on
+    runs-on: ubuntu-latest # the OS that this job runs on
     
     permissions: 
       contents: read
