--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,10 @@ jobs:
       
   # the steps that this job consists of
     steps:
-    - name: Checkout  # check out our repo
-      uses: actions/checkout@v3
+    - name: Checkout # check out our repo
+      uses: actions/checkout@v3 
+      with:
+        ssh-key: ${{ secrets.CI_SSH_KEY_PRIVATE }} 
     
     - name: Log in to the container registry
       uses: docker/login-action@v2
