--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,14 @@ jobs:
   # the steps that this job consists of
     steps:
     - name: Checkout  # check out our repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v3a
     
     - name: Log in to the container registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.TOKEN }}
 
     # generate the tags that we'll use to name our image
     - name: Get Docker metadata
