(hopefully) final commit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
-name: CI # the name of our workflow is 'CI'
+name: CI # Continuous Integration
 
-# run this workflow when we push to the 'main' branch
 on:	
   push:
     branches:
@@ -9,26 +8,24 @@ on:
 jobs:
 
   build: 
-    name: Build and Push Container Image # the job's full name
-    runs-on: ubuntu-latest # the OS that this job runs on
+    name: Build and Push Container Image
+    runs-on: ubuntu-latest
     
     permissions: 
       contents: read
       packages: write
       
-  # the steps that this job consists of
     steps:
-    - name: Checkout  # check out our repo
+    - name: Checkout
       uses: actions/checkout@v3
     
     - name: Log in to the container registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
+        username: ${{ github.repository_owner }} # possibly not needed, but I cannot be bothered to test this
         password: ${{ secrets.TOKEN }}
 
-    # generate the tags that we'll use to name our image
     - name: Get Docker metadata
       id: meta
       uses: docker/metadata-action@v4
@@ -38,7 +35,6 @@ jobs:
           type=sha 
           type=raw,value=latest,enable={{is_default_branch}}
     
-    # build and push our image, using output from previous step
     - name: Build and push Docker image
       uses: docker/build-push-action@v3
       with:
